# noeron

./: .env.example  .gitignore  CLAIM_TIMING_DEBUG_PROMPT.md  DISTILLED_CLAIMS_DELIVERED.md  DISTILLED_CLAIMS_FILES.md  DISTILLED_CLAIMS_QUICKSTART.md  DISTILLED_CLAIMS_README.md  Procfile  QUICK_FIX_CLAIM_ID.md  README.md  SUPABASE_QUICKSTART.md  SUPABASE_SETUP.md  TIMING_SYNC_FIX_PROMPT.md  diagnostic_sample.json  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  retry-list.txt  tailwind.config.ts  test_server.py  tsconfig.json
.githooks/: pre-commit
agents/: __init__.py  verification_agent.py
app/: globals.css  layout.tsx
cache/: deep_dive_summaries.json  evidence_threads.json  figure_analysis.json  generated_podcasts.json  podcast_lex_325_claims.json  podcast_lex_325_claims_with_timing.json  podcast_theories_of_everything_claims.json
data/: context_card_registry.json  episode_summaries.json  episodes.json  figures_metadata.json
docs/: ARCHITECTURE.md  CONFIDENCE_SCORE.md  DEEP_EXPLORATION_INTEGRATION.md  DEPLOYMENT.md  DISTILLED_CLAIMS_DELIVERED.md  DISTILLED_CLAIMS_GUIDE.md  DISTILLED_CLAIMS_SUMMARY.md  DISTILLED_CLAIMS_VISUAL_GUIDE.md  FIX_MCP_SERVER_NOW.md  KNOWLEDGE_GRAPH_ARCHITECTURE.md  LLM_CONTEXT.md  MCP_SERVER_RESTART.md  MIGRATION_COMPLETE.md  PROMPT_ENGINEERING_DETAILS.md  START_MCP_SERVER.md  SUPABASE_QUICKSTART.md  SUPABASE_SETUP.md  TAXONOMY_CLUSTERS.md  TIMING_SYNC_FIX_PROMPT.md  WORK_LOG.md  noeron_ux_spec.md  pipeline.md
frontend/: package.json  pnpm-lock.yaml
scripts/: README.md  add_episode.py  (+58 more)
(+172 files in other folders)
