[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioelectricity-research-mcp"
version = "0.2.0"
description = "MCP server for bioelectricity research literature with comprehensive paper storage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "arxiv>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "google-genai>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
bioelectricity-research = "bioelectricity_research.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bioelectricity_research"]
